# orbifold-scene-generator

./: .README.swp  .gitignore  README.md  genscene.py  main.py  scene_parsing.py  tiling.py
animation/: animation_x2222.xml  img_0_clr.xml  main.py
compositor/: .gitignore  CMakeLists.txt  compositor.cpp
example_xml/: glass_x333_opath.xml  pumpkin_x632_opath.xml  toilet_xx_opath.xml  x2222.exr  x2222.xml  x2222_frustum_height4800.xml  x333.xml  x442.xml  xxn.xml  xxx.xml
geometry/: shapes.py  utils.py
output_pumpkin_x632_opath.xml_1503082493/: img_1_clr.xml  img_2_clr.xml  inc_img_0_clr.xml  inc_img_1_clr.xml  inc_img_2_clr.xml  inc_img_3_clr.xml  inc_img_4_clr.xml  inc_img_5_clr.xml  inc_img_6_clr.xml  inc_img_7_clr.xml
scene_parsing/: __init__.py  utils.py
test_xml/: camera.xml  defs.xml  x2222.xml  x2222_imports.xml  x333.xml  x442.xml  xxn.xml  xxx.xml
toiletxx/: render.sh  toilet_xx_erpt.xml  toilet_xx_v2_erpt.xml  toilet_xx_v2_opath.xml
toiletxx/mesh/: picture.mtl
toiletxx/output_toilet_xx_opath.xml_1495251821/: img_0_clr.xml  img_0_clr_16spp.xml  img_1_clr.xml  inc_img_0_clr_16spp.exr  inc_img_0_clr_16spp.xml  inc_img_1_clr.xml
toiletxx/output_toilet_xx_v2_opath.xml_1495318163/: img_0_clr.xml  img_1_clr.xml  inc_img_0_clr.xml  inc_img_1_clr.xml
visualiser/: camera_control.py  gl_geometry.py  skybox.py  viewer.py  visualizer.py
